<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bground"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@drawable/elad_top"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dip"
            android:gravity="center|center_vertical"
            android:text="@string/qqs_title"
            android:textColor="@color/white"
            android:textSize="20dip"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="280dip"
        android:layout_height="180dip"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:src="@android:drawable/alert_light_frame" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="47dip"
                android:layout_marginRight="47dip">

                <TableRow
                    android:background="@drawable/elad_shang"
                    android:gravity="center" >

                    <TextView
                        style="@style/qqs_textview"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/qqs_textviewa" />

                    <TextView
                        android:id="@+id/qqs_textviewa"
                        style="@style/qqs_textviewa"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:background="@drawable/elad_zhongjian"
                    android:gravity="center" >

                    <TextView
                        style="@style/qqs_textview"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/qqs_textviewb" />

                    <TextView
                        android:id="@+id/qqs_textviewb"
                        style="@style/qqs_textviewa"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:background="@drawable/elad_zhongjian"
                    android:gravity="center" >

                    <TextView
                        style="@style/qqs_textview"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/qqs_textviewc" />

                    <TextView
                        android:id="@+id/qqs_textviewc"
                        style="@style/qqs_textviewa"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:background="@drawable/elad_xia"
                    android:gravity="center" >

                    <TextView
                        style="@style/qqs_textview"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/qqs_textviewd" />

                    <TextView
                        android:id="@+id/qqs_textviewd"
                        style="@style/qqs_textviewa"
                        android:layout_weight="1" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/button_buy"
                style="@style/btn_qqsx"
                android:layout_marginTop="5dip"
                android:background="@drawable/elad_select_bt"
                android:text="@string/qqs_btn_buy"
                android:textColor="@color/dark_blue" />

            <Button
                android:id="@+id/button_booking"
                style="@style/btn_qqsx"
                android:background="@drawable/elad_select_bt"
                android:text="@string/qqs_btn_booking"
                android:textColor="@color/dark_blue" />

            <Button
                android:id="@+id/button_consult"
                style="@style/btn_qqsx"
                android:background="@drawable/elad_select_bt"
                android:text="@string/qqs_btn_consult"
                android:textColor="@color/dark_blue" />

            <Button
                android:id="@+id/button_coupon"
                style="@style/btn_qqsx"
                android:background="@drawable/elad_select_bt"
                android:text="@string/qqs_btn_coupon"
                android:textColor="@color/dark_blue" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>